--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Food Ordering</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
